= HEAD

* Add Roda.path_block to get the block related to the given class used for Road#path (jeremyevans)

* Make Roda#path work correctly in subclasses (jeremyevans)

= 2.1.0 (2015-03-13)

* Have add_file in the mailer plugin support blocks, which are called after the file has been added (jeremyevans)

* Add append_view_subdir to view_options, for appending to an existing view subdirectory (jeremyevans)

* Rename view_subdirs plugin to view_options, add support for branch/route specific view/layout options/locals (jeremyevans)
 
* Merge :locals set in the render plugin options into :locals provided in call to view/render (jeremyevans)

* Add support for registering classes in the path plugin for use with Roda#path (jeremyevans)

* Use :add_script_name app option as default for path method :add_script_name option in path plugin (jeremyevans)

* Support :add_script_name app option in assets plugin, to prefix URLs with SCRIPT_NAME (jeremyevans)

* Make r.multi_route in multi_route plugin work without any named routes defined (jeremyevans)

* Add :static plugin, for more easily serving static files (jeremyevans)

* Recognize Roda :root option in render and assets plugins (jeremyevans)

* Make :layout=>false option in render plugin override previous layout template (jeremyevans)

* Make add_file in the mailer plugin add the files after the email body instead of before (jeremyevans)

= 2.0.0 (2015-02-13)

* Allow Roda app to be used as a regular rack app even when using the middleware plugin (jeremyevans)

* Make render plugin :layout option always be true or false (jeremyevans)

* Make :layout=>true view option use the default layout (jeremyevans)

* Make error_handler plugin rescue ScriptError in addition to StandardError (jeremyevans)

* Make halt plugin integrate with symbol_views, json, and similar plugins (jeremyevans)

* Add padrino_render plugin, adding render/partial methods that work similar to Padrino (jeremyevans)
